[package]
name = "gravitrain"
version = "0.1.1-alpha"
edition = "2024"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen = "0.2.99"

[dev-dependencies]
wasm-bindgen-test = "0.3.49"

[features]
console_error_panic_hook = ["dep:console_error_panic_hook"]
default = ["console_error_panic_hook"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
