[package]
name = "gravitrain"
version = "0.1.2-alpha"
edition = "2021"
license = "Apache-2.0"
description = "A pet project for gravity simulation in Rust."
repository = "https://github.com/rishvic/gravitrain"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen = "0.2.99"

[dev-dependencies]
wasm-bindgen-test = "0.3.49"

[features]
console_error_panic_hook = ["dep:console_error_panic_hook"]
default = ["console_error_panic_hook"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
